--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "node-cron": "^3.0.3",
     "openai": "^4.20.1",
     "papaparse": "^5.5.3",
+    "qrcode": "^1.5.4",
     "qrcode-terminal": "^0.12.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
