--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "tailwind-merge": "^3.4.0",
     "tailwindcss-animate": "^1.0.7",
     "uploadthing": "^7.7.4",
-    "whatsapp-web.js": "^1.34.4",
+    "whatsapp-web.js": "^1.23.1-alpha.5",
     "wwebjs-mongo": "^1.1.0"
   },
   "devDependencies": {
