--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "bot": "nodemon src/bot.js",
     "dev": "next dev",
     "build": "next build",
-    "next-start": "next start"
+    "next-start": "next start",
+    "postinstall": "patch-package"
   },
   "keywords": [
     "whatsapp",
@@ -48,7 +49,7 @@
     "tailwind-merge": "^3.4.0",
     "tailwindcss-animate": "^1.0.7",
     "uploadthing": "^7.7.4",
-    "whatsapp-web.js": "^1.23.1-alpha.5",
+    "whatsapp-web.js": "^1.34.4",
     "wwebjs-mongo": "^1.1.0"
   },
   "devDependencies": {
@@ -57,6 +58,7 @@
     "@types/react-dom": "^19.2.3",
     "autoprefixer": "^10.4.22",
     "nodemon": "^3.0.2",
+    "patch-package": "^8.0.1",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.0",
     "typescript": "^5.9.3"
